src/test/fail/invalid_eq.lly
#[
SyntaxError: Invalid operation: list[integer] == list[string].
Where: File "test/fail/invalid_eq.lly" at line 6
]#

[1] == ["1"]
